--- a/_config.redefine.yml
+++ b/_config.redefine.yml
@@ -84,8 +84,11 @@ menu: #you can customize, i18n files are in the theme's languages folder. fa-reg
   Home: 
     path: / 
     icon: fa-regular fa-house # can be empty
-  Archives: 
-    path: /archives 
+  # Archives: 
+  #   path: /archives 
+  #   icon: fa-regular fa-archive # can be empty
+  tags: 
+    path: /tags
     icon: fa-regular fa-archive # can be empty
   # Status: 
   #   path: https://status.evanluo.top/
